@@ -79,7 +79,7 @@ int CmdAnnotate::execute (std::string&)
 
     // Annotate the specified task.
     std::string question = format (STRING_CMD_ANNO_CONFIRM,
-                                   task.id,
+                                   task.identifier (true),
                                    task.get ("description"));
 
     task.modify (Task::modAnnotate, true);
